# pipeline_node_agents

./: .gitignore  README.md  pyproject.toml
adapters/: base_adapter.py  python_fn_adapter.py
core/: node.py
examples/: random_mean_pipeline.py  random_mean_pipeline_crewai.py  search_and_summarize.py
src/adapters/: crewai_adapter.py  python_fn_adapter.py
src/core/: node.py  pipeline.py
